fixed label spacing

--- a/frontend/src/components/Calendar/CalendarToolbar.css
+++ b/frontend/src/components/Calendar/CalendarToolbar.css
@@ -1,7 +1,6 @@
 .distribution-label {
     margin-left: 20px;
     display: block;
-    padding-left: 4px;
 }
 
 .filter-input {
@@ -20,7 +19,6 @@
     border-style: solid;
     margin-left: 18px;
     display: block;
-    padding-left: 4px;
 }
 
 .filter-holder {
